tried fixing the makefile, no success, tried changing the implementation of walkers on dendrite works, not done yet

--- a/code/makefile
+++ b/code/makefile
@@ -1,14 +1,27 @@
 # makefile for project
 
-SRCS = Combine.cpp Diffusion.cpp Tridiag.cpp Random.cpp Dendrite.cpp main_walk.cpp
+#SRCS = Combine.cpp Diffusion.cpp Tridiag.cpp Random.cpp Dendrite.cpp Spine.cpp Walker.h 
+SRCS = *.cpp Walker.h
 OBJS = Combine.o Diffusion.o Tridiag.o Random.o Dendrite.o main_walk.o
 CC = g++
 DEBUG = -g
 CFLAGS = -O2 
 LFLAGS = -larmadillo -llapack -lblas $(DEBUG)
 
-main_walk: libs
-	$(CC) $(OBJS) $(LFLAGS) -o main_walk
+main_walk: libraries
+	$(CC) main_walk.cpp $(wildcard libraries/*) $(LFLAGS) -o main_walk
+
+libraries:
+	mkdir libraries/
+	for file in $(SRCS); do \
+		$(CC) -c $$file; \
+		done
+	mv *.o libraries/; \
+
+
+clean:
+	rm -rf libraries/; \
+	rm main_walk
 
 libs:
 	$(CC) -c $(SRCS) $(CFLAGS) $(LFLAGS) 
@@ -30,6 +43,3 @@ Random.o: Random.h Random.cpp
 
 Dendrite.o: main_walk.h Combine.h Dendrite.h Dendrite.cpp
 	$(CC) $(CFLAGS) $(LFLAGS) Dendrite.cpp
-
-clean:
-	rm $(OBJS) main_walk
